tests/snapshots/render__ssid_unavailable_says_so_rather_than_omitting_the_radio.snap
---
source: tests/render.rs
expression: "human::render(&snapshot, &options(80))"
---
  netinspect v0.3.1                                              14:22:07 CEST
  ────────────────────────────────────────────────────────────────────────────

  ▌ Wi-Fi · en0                                                    [connected]
  │ network     <SSID unavailable>           ⣠⣾⡇ −48 dBm · Wi-Fi 6 · 1200 Mb/s
  │ ipv4        192.168.1.24/24                                           dhcp
  │ ipv6        fe80::1c4d:8a2f:9b01:3e77
  │ gateway     192.168.1.1
  ╵ hardware    a4:83:e7:2d:11:9c                                     mtu 1500

  DNS
    servers     1.1.1.1   9.9.9.9
    search      otthon.lan
    proxy       none
